--- a/main.css
+++ b/main.css
@@ -2,8 +2,10 @@
 
 body { font-family: Verdana, sans-serif; margin: 0}
 
-.logo { margin: 40px; }
-h1 { font-family: Verdana, sans-serif; margin: 40px; background-color: lightgrey; padding: 12px; }
+.logo { margin: 40px; display: inline-block; }
+.logo_small { margin: 40px; }
+.logo_right { margin: 40px; float: right; }
+h1 { font-family: Verdana, sans-serif; margin: 40px; background-color: lightgrey; padding: 12px; clear: right; }
 h2 { font-family: Verdana, sans-serif; margin: 40px}
 h3 { font-family: Verdana, sans-serif; margin: 40px; background-color: lightgrey; padding: 8px; }
 ul { font-family: Verdana, sans-serif; margin: 40px}
